--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+numpy==1.19.4
+scipy==1.5.4
 Werkzeug==1.0.1
 WTForms==2.3.3
